🧩minor fixes to sizing and spacing

--- a/frontend/src/components/accordion/Accordion.module.css
+++ b/frontend/src/components/accordion/Accordion.module.css
@@ -4,5 +4,6 @@
 
 .accordionwrapper {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    width: 100%;
 }
