--- a/frontend/src/components/latestblog/Latestblog.module.css
+++ b/frontend/src/components/latestblog/Latestblog.module.css
@@ -18,7 +18,7 @@
 
 .latestposts {
     height: 93.5%;
-    width: 95%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
